# toggl-utopia

./: README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/togglutopia/data/: LocalDb.kt  Repository.kt  UtopiaApiService.kt
android/app/src/main/java/com/example/togglutopia/data/model/: Delta.kt  EntityUpdate.kt  Meta.kt  Payload.kt  Project.kt  SnapshotResponse.kt  TimeEntry.kt  User.kt
android/app/src/main/java/com/example/togglutopia/data/model/request/: SyncRequest.kt
android/app/src/main/java/com/example/togglutopia/ui/: MainActivity.kt  MainState.kt  MainViewModel.kt  Theme.kt  TogglApp.kt  Typography.kt  Vectors.kt
android/app/src/main/java/com/example/togglutopia/ui/edit/: EditScreen.kt
android/app/src/main/java/com/example/togglutopia/ui/log/: LogScreen.kt
android/app/src/main/java/com/example/togglutopia/ui/login/: LoginScreen.kt
android/app/src/main/java/com/example/togglutopia/ui/timeEntry/: TimeEntryComposables.kt
android/app/src/main/java/com/example/togglutopia/utils/: DateExtensions.kt
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
api/: Cargo.toml
api/src/: auth.rs  endpoints.rs  error.rs  main.rs  models.rs  responses.rs  sync.rs  toggl_api.rs
api/src/sync/: conflicts.rs  login.rs  prelude.rs  server.rs  utils.rs
api/src/toggl_api/: endpoints.rs  models.rs  projects.rs  time_entries.rs  user.rs
(+2 files in other folders)
