[package]
name = "toggl-utopia"
version = "0.1.0"
authors = ["Simon Rozsival <simon@rozsival.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
serde = "1.0.103"
serde_derive = "1.0.103"
base64 = "0.11.0"
reqwest = { version = "0.9.22", features = [] }
chrono = { version = "0.4.10", features=["serde"] }
env_logger = "0.7.1"